force-app/main/default/objects/Opportunity/fields/Cabinet_Equivalent__c.field-meta.xml
<CustomField>
    <fullName>Cabinet_Equivalent__c</fullName>
    <inlineHelpText>The number of cabinets the customer/prospect needs, or if customer/prospect needs a cage the number of cabinets that will reside within the cage.</inlineHelpText>
    <label>Cabinet Equivalent</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>