force-app/main/default/objects/Opportunity/fields/Compelling_Event_Details__c.field-meta.xml
<CustomField>
    <fullName>Compelling_Event_Details__c</fullName>
    <description>Additional details on what is driving this opportunity for the customer.</description>
    <inlineHelpText>Expand on why the above compelling event was selected.</inlineHelpText>
    <label>Compelling Event Details</label>
    <type>TextArea</type>
</CustomField>