force-app/main/default/objects/Opportunity/fields/Lead_Source_Detail__c.field-meta.xml
<CustomField>
    <fullName>Lead_Source_Detail__c</fullName>
    <description>Further details regarding the lead source. Dependent on selection of Inbound or Outbound in Lead Source.</description>
    <label>Lead Source Detail</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>LeadSource</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Broker</fullName>
            </value>
            <value>
                <fullName>Channel Partner</fullName>
            </value>
            <value>
                <fullName>Customer Email or Phone Call</fullName>
            </value>
            <value>
                <fullName>Customer Experience Team</fullName>
            </value>
            <value>
                <fullName>Customer Referral</fullName>
            </value>
            <value>
                <fullName>Datacenters.com</fullName>
            </value>
            <value>
                <fullName>DSA Scheduled Meeting</fullName>
            </value>
            <value>
                <fullName>Existing Customer Request</fullName>
            </value>
            <value>
                <fullName>Existing Deal Engagement</fullName>
            </value>
            <value>
                <fullName>Industry Event</fullName>
            </value>
            <value>
                <fullName>Internal Referral</fullName>
            </value>
            <value>
                <fullName>Leadfeeder Email</fullName>
            </value>
            <value>
                <fullName>Membership Associations</fullName>
            </value>
            <value>
                <fullName>Netrality Event</fullName>
            </value>
            <value>
                <fullName>Operations/Customer Portal</fullName>
            </value>
            <value>
                <fullName>Phone Call to Dedicated Sales Line</fullName>
            </value>
            <value>
                <fullName>Phone call to General Sales Number</fullName>
            </value>
            <value>
                <fullName>Prospecting</fullName>
            </value>
            <value>
                <fullName>QBR/SBR</fullName>
            </value>
            <value>
                <fullName>Renewal Engagement</fullName>
            </value>
            <value>
                <fullName>Revenue Recovery Audit</fullName>
            </value>
            <value>
                <fullName>sales@netrality.com</fullName>
            </value>
            <value>
                <fullName>Social Network</fullName>
            </value>
            <value>
                <fullName>Website</fullName>
            </value>
            <value>
                <fullName>ZoomInfo</fullName>
            </value>
            <value>
                <fullName>Impartner Deal Registration</fullName>
            </value>
            <value>
                <fullName>Channel Registration Form</fullName>
                <isActive>false</isActive>
                <label>Channel Registration Form</label>
            </value>
            <value>
                <fullName>Existing Customer Strategic Business Review</fullName>
                <isActive>false</isActive>
                <label>Existing Customer Strategic Business Review</label>
            </value>
            <value>
                <fullName>Existing Customer Upsell</fullName>
                <isActive>false</isActive>
                <label>Existing Customer Upsell</label>
            </value>
            <value>
                <fullName>LifeLine 733 W Henry Migration</fullName>
                <isActive>false</isActive>
                <label>LifeLine 733 W Henry Migration</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>