force-app/main/default/objects/Opportunity/fields/Lost_to_Competitor__c.field-meta.xml
<CustomField>
    <fullName>Lost_to_Competitor__c</fullName>
    <label>Lost to Competitor</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Aligned Data Centers</fullName>
            </value>
            <value>
                <fullName>Centurylink</fullName>
            </value>
            <value>
                <fullName>Cloud Provider (AWS, Azure, etc.)</fullName>
            </value>
            <value>
                <fullName>Cologix</fullName>
            </value>
            <value>
                <fullName>Colt</fullName>
            </value>
            <value>
                <fullName>Compass Data Centers</fullName>
            </value>
            <value>
                <fullName>Coresite</fullName>
            </value>
            <value>
                <fullName>Cyrus One</fullName>
            </value>
            <value>
                <fullName>Cyxtera</fullName>
            </value>
            <value>
                <fullName>Databank</fullName>
            </value>
            <value>
                <fullName>Data Foundry</fullName>
            </value>
            <value>
                <fullName>Digital Realty</fullName>
            </value>
            <value>
                <fullName>EdgeConnex</fullName>
            </value>
            <value>
                <fullName>Element Critical</fullName>
            </value>
            <value>
                <fullName>Equinix</fullName>
            </value>
            <value>
                <fullName>Evoque</fullName>
            </value>
            <value>
                <fullName>Flexential</fullName>
            </value>
            <value>
                <fullName>H5 Data Centers</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>QTS</fullName>
            </value>
            <value>
                <fullName>Sabey</fullName>
            </value>
            <value>
                <fullName>Skybox</fullName>
            </value>
            <value>
                <fullName>Stackinfra</fullName>
            </value>
            <value>
                <fullName>Stream Data Centers</fullName>
            </value>
            <value>
                <fullName>Switch</fullName>
            </value>
            <value>
                <fullName>T5 Data Centers</fullName>
            </value>
            <value>
                <fullName>Tierpoint</fullName>
            </value>
            <value>
                <fullName>TRG</fullName>
            </value>
            <value>
                <fullName>Zayo</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>