force-app/main/default/objects/Opportunity/fields/Use_Case__c.field-meta.xml
<CustomField>
    <fullName>Use_Case__c</fullName>
    <description>Detailed description of how this customer is planning on using this environment.</description>
    <inlineHelpText>Detailed description of how this customer is planning on using this environment.</inlineHelpText>
    <label>Use Case</label>
    <length>1500</length>
    <type>LongTextArea</type>
</CustomField>