force-app/main/default/objects/Opportunity/recordTypes/Churn.recordType-meta.xml
<RecordType>
    <fullName>Churn</fullName>
    <active>true</active>
    <businessProcess>Churn</businessProcess>
    <description>An opportunity representing revenue loss from churn of an existing customer.</description>
    <label>Churn</label>
</RecordType>