force-app/main/default/objects/Opportunity/recordTypes/Expansion.recordType-meta.xml
<RecordType>
    <fullName>Expansion</fullName>
    <active>true</active>
    <businessProcess>Expansions 2024</businessProcess>
    <description>An opportunity with a existing customer in an existing market.</description>
    <label>Expansion</label>
</RecordType>