force-app/main/default/objects/Opportunity/recordTypes/Minimum_Metered_Bookings.recordType-meta.xml
<RecordType>
    <fullName>Minimum_Metered_Bookings</fullName>
    <active>true</active>
    <businessProcess>Expansions 2024</businessProcess>
    <description>Accounting for bookings from minimum power commitments on Service Orders.</description>
    <label>Minimum Metered Bookings</label>
</RecordType>