force-app/main/default/objects/Opportunity/recordTypes/New_Logo.recordType-meta.xml
<RecordType>
    <fullName>New_Logo</fullName>
    <active>true</active>
    <businessProcess>New Logos and Markets 2024</businessProcess>
    <description>An opportunity with an account we are not doing business with yet.</description>
    <label>New Logo</label>
</RecordType>