force-app/main/default/objects/Opportunity/recordTypes/New_Market.recordType-meta.xml
<RecordType>
    <fullName>New_Market</fullName>
    <active>true</active>
    <businessProcess>New Logos and Markets 2024</businessProcess>
    <description>An opportunity with an existing customer who is expanding into a new market.</description>
    <label>New Market</label>
</RecordType>