force-app/main/default/objects/Opportunity/recordTypes/Out_of_Market.recordType-meta.xml
<RecordType>
    <fullName>Out_of_Market</fullName>
    <active>true</active>
    <businessProcess>Out of Market Sales Process</businessProcess>
    <description>To track deployments in markets outside of the current Netrality portfolio. We cannot execute this sale because we do not have a data center in this market..</description>
    <label>Out of Market</label>
</RecordType>