force-app/main/default/objects/Opportunity/recordTypes/Renewal.recordType-meta.xml
<RecordType>
    <fullName>Renewal</fullName>
    <active>true</active>
    <businessProcess>Renewals</businessProcess>
    <description>A renewal of existing services with an existing customer.</description>
    <label>Renewal</label>
</RecordType>