force-app/main/default/objects/Opportunity/recordTypes/Revenue_Share.recordType-meta.xml
<RecordType>
    <fullName>Revenue_Share</fullName>
    <active>true</active>
    <businessProcess>New and Expansion Deals</businessProcess>
    <description>For bookings related to revenue share agreements.</description>
    <label>Revenue Share</label>
</RecordType>